# QuantizedNeuralCollapse

./: .gitignore  README.md  argparser.py  experiment_logger.py  general_analysis.py  main.py  neural_collapse_analyzer.py  plotter.py  pyproject.toml  train_utils.py  training.py
collapse_analysis/: base_neural_collapse_analyzer.py  language_collapse_analyzer.py  nc_paper_metrics.py  scratch_metrics.py  vision_collapse_analyzer.py
data_loading/: dataset_loader.py  shake_txt_loader.py  shakespeare_char_prepare.py  wikitext.py
data_loading/tinystories/: tinystories_builder.py  tinystories_char_dataset.py
model_architectures/: convnext.py  convnext_nano.py  karpathy_nanogpt.py  model_constructor.py  shakespeare_char_model.py  simple_cnn.py  simple_resnet.py  simplegpt.py  tester.ipynb
quantization/: q_controller.py
training/: accumulators.py  base_trainer.py  language_trainer.py  training.py  vision_trainer.py
