[project]
name = "project-work-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.9.0",
    "numpy>=2.3.4",
    "tqdm>=4.67.1",
    "torchvision>=0.24.0",
    "datasets>=4.2.0",
    "transformers>=4.57.1",
    "huggingface-hub>=0.35.3",
    "hf-xet>=1.1.10",
    "scikit-learn>=1.7.2",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
